Menu overlap issue #10

--- a/less/layouts.less
+++ b/less/layouts.less
@@ -6,6 +6,7 @@
 // Container (centered, fixed-width layouts)
 .container {
   .container-fixed();
+  margin-bottom:13%;
 }
 
 // Fluid layouts (left aligned, with sidebar, min- & max-width content)
