--- a/less/responsive-767px-max.less
+++ b/less/responsive-767px-max.less
@@ -49,6 +49,7 @@
   // Remove width from containers
   .container {
     width: auto;
+    margin-bottom: 0px;
   }
   // Fluid rows
   .row-fluid {
