--- a/less/utilities.less
+++ b/less/utilities.less
@@ -138,9 +138,9 @@ img.navbarlogo{
 	margin-left: 8px;
 }
 
-div#content{
+div.content {
 	margin-top: 0px;
-	margin-bottom: 13%;
+	margin-bottom: 0px;
 }
 
 @media (max-width: 767px) {
